--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <div id="wrapper">
   
     <header id="header">
-    
+      <h1> Cliffside Vfx </h1>;
     </header>
  <div id="menucontainer">
 	<ul id="menu">
