--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <div id="wrapper">
 
     <header id="header">
-    
+      <h1> Cliffside Vfx </h1>;
     </header>
  <div id="menucontainer">
 	<ul id="menu">
